--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="BARS_Client_V2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BARS_Client_V2"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:BARS_Client_V2">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
